--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 
     window.onload = function () {
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register("/service-worker.js")
+        navigator.serviceWorker.register("service-worker.js")
           .then(function (registration) {
             console.log("serviceWorker registed.");
           }).catch(function (error) {
