--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,6 @@
       }
 
       adddata("subject!" + e.id.replace('c', 'h').replace('d', 'i').replace('e', 'j').replace('f', 'k').replace('g', 'l'), text);
-
     }
 
     function check_subject(s) {
@@ -1519,6 +1518,7 @@
       let xhr = new XMLHttpRequest();
       xhr.open('GET', URL);
       xhr.send();
+      alert("送信しました");
     }
 
 
