--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=no" name="viewport" />
+  <meta content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=no" name="viewport" />。
+  <meta name="robots" content="noindex,nofollow,noarchive" />
   <meta name="theme-color" content="white" />
   <link rel="manifest" href="manifest.json">
   <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css' rel='stylesheet' />
