--- a/index.html
+++ b/index.html
@@ -44,28 +44,25 @@
   <div class="form" id="form">
     <div class="radio" style="margin-top: 6vh;">
       <div>
-        <div><input type="radio" name="subject" data-col="#4169e1" onchange="change_date(0)"><label>数II</label></div>
-        <div><input type="radio" name="subject" data-col="#4169e1" onchange="change_date(1)"><label>数B</label></div>
+        <div><input type="radio" name="subject" data-col="#4169e1" onchange="change_date(0)"><label>数1</label></div>
+        <div><input type="radio" name="subject" data-col="#4169e1" onchange="change_date(0)"><label>数2</label></div>
+        <div><input type="radio" name="subject" data-col="#4169e1" onchange="change_date(0)"><label>数3</label></div>
         <div><input type="radio" name="subject" data-col="#ff6347" onchange="change_date(2)"><label>現文</label></div>
         <div><input type="radio" name="subject" data-col="#ff6347" onchange="change_date(3)"><label>古典</label></div>
-        <div><input type="radio" name="subject" data-col="#228b22" onchange="change_date(4)"><label>総英</label></div>
-        <div><input type="radio" name="subject" data-col="#228b22" onchange="change_date(5)"><label>異理</label></div>
       </div>
       <div>
-        <div><input type="radio" name="subject" data-col="#228b22" onchange="change_date(6)"><label>英表</label></div>
-        <div><input type="radio" name="subject" data-col="#228b22" onchange="change_date(7)"><label>英表+</label></div>
-        <div><input type="radio" name="subject" data-col="#9400d3" onchange="change_date(8)"><label>物理</label></div>
-        <div><input type="radio" name="subject" data-col="#1e90ff" onchange="change_date(9)"><label>化学</label></div>
-        <div><input type="radio" name="subject" data-col="#ff8c00" onchange="change_date(10)"><label>世界史</label></div>
+        <div><input type="radio" name="subject" data-col="#228b22" onchange="change_date(4)"><label>英理</label></div>
+        <div><input type="radio" name="subject" data-col="#228b22" onchange="change_date(5)"><label>英表</label></div>
+        <div><input type="radio" name="subject" data-col="#228b22" onchange="change_date(6)"><label>英表+</label></div>
+        <div><input type="radio" name="subject" data-col="#9400d3" onchange="change_date(8)"><label>物理a</label></div>
+        <div><input type="radio" name="subject" data-col="#9400d3" onchange="change_date(8)"><label>物理b</label></div>
+      </div>
+      <div>
+        <div><input type="radio" name="subject" data-col="#1e90ff" onchange="change_date(9)"><label>化学a</label></div>
+        <div><input type="radio" name="subject" data-col="#1e90ff" onchange="change_date(9)"><label>化学b</label></div>
         <div><input type="radio" name="subject" data-col="#ff8c00" onchange="change_date(11)"><label>地理a</label></div>
-      </div>
-      <div>
         <div><input type="radio" name="subject" data-col="#ff8c00" onchange="change_date(12)"><label>地理b</label></div>
         <div><input type="radio" name="subject" data-col="#c0c0c0" onchange="change_date(13)"><label>体育</label></div>
-        <div><input type="radio" name="subject" data-col="#c0c0c0" onchange="change_date(14)"><label>保健</label></div>
-        <div><input type="radio" name="subject" data-col="#c0c0c0" onchange="change_date(15)"><label>音楽</label></div>
-        <div><input type="radio" name="subject" data-col="#c0c0c0" onchange="change_date(16)"><label>家庭</label></div>
-        <div><input type="radio" name="subject" data-col="#c0c0c0" onchange="change_date(17)"><label>課</label></div>
         <div><input type="radio" name="subject" data-col="#20b2aa" onchange="change_date2()" checked><label>無指定</label></div>
       </div>
     </div>
